added find all contacts whose role is developer
